add ant task jre-all